tests/errors/ternary.HC
//ERR: no question-colon operator
I64 x;
x=1?2:3;
